--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,8 @@
 @book{Szeliski2011,
-abstract = {As humans, we perceive the three-dimensional structure of the world around us with apparent ease. However, despite all of the recent advances in computer vision research, the dream of having a computer interpret an image at the same level as a two-year old remains elusive. Why is computer vision such a challenging problem, and what is the current state of the art?Computer Vision: Algorithms and Applications explores the variety of techniques commonly used to analyze and interpret images. It also describes challenging real-world applications where vision is being successfully used, both for specialized applications such as medical imaging and fun consumer-level tasks such as image editing and stitching, which students can apply to their own personal photos and videos.More than just a source of "recipes", this text/reference also takes a scientific approach to basic vision problems, formulating physical models of the imaging process before inverting this process to produce the best possible descriptions of a scene. Exercises are presented throughout the book, with a heavy emphasis on testing algorithms.Suitable for either an undergraduate or a graduate-level course in computer vision, this textbook focuses on basic techniques that work under real-world conditions and encourages students to push their creative boundaries.Dr. Richard Szeliski has over twenty years' experience in computer vision research, most notably at Digital Equipment Corporation and Microsoft.},
 address = {London},
 author = {Szeliski, Richard},
 booktitle = {Computer},
 doi = {10.1007/978-1-84882-935-0},
-file = {:Users/tiao/Documents/Mendeley Desktop/Szeliski/2011/Szeliski\_2011\_Computer Vision.pdf:pdf},
 isbn = {978-1-84882-934-3},
 issn = {10636919},
 pages = {832},
@@ -16,17 +14,9 @@ url = {http://research.microsoft.com/en-us/um/people/szeliski/book/drafts/szelsk
 volume = {5},
 year = {2011}
 }
-@inproceedings{Ignjatovic2011,
-author = {Ignjatovic, Aleksandar},
-booktitle = {UNSW Applied Mathematics Seminar},
-file = {:Users/tiao/Documents/Mendeley Desktop/Ignjatovic/2011/Ignjatovic\_2011\_Chromatic Derivatives and Expansions.pdf:pdf},
-number = {March},
-title = {{Chromatic Derivatives and Expansions}},
-year = {2011}
-}
+
 @inproceedings{Liu2011,
 author = {Liu, Chun-Lin},
-file = {:Users/tiao/Documents/Mendeley Desktop/Liu/2011/Liu\_2011\_Chromatic Derivatives A New Perspective of Signal Representation.pdf:pdf},
 title = {{Chromatic Derivatives: "A New Perspective of Signal Representation"}},
 year = {2011}
 }
@@ -34,7 +24,6 @@ year = {2011}
 author = {Bertalmio, M and Bertozzi, A.L. and Sapiro, G},
 booktitle = {Proceedings of the 2001 IEEE Computer Society Conference on Computer Vision and Pattern Recognition. CVPR 2001},
 doi = {10.1109/CVPR.2001.990497},
-file = {:Users/tiao/Documents/Mendeley Desktop/Bertalmio, Bertozzi, Sapiro/2001/Bertalmio, Bertozzi, Sapiro\_2001\_Navier-stokes, fluid dynamics, and image and video inpainting.pdf:pdf},
 isbn = {0-7695-1272-0},
 pages = {I--355--I--362},
 publisher = {IEEE Comput. Soc},
@@ -46,7 +35,6 @@ year = {2001}
 @article{Telea2004,
 author = {Telea, Alexandru},
 doi = {10.1080/10867651.2004.10487596},
-file = {:Users/tiao/Documents/Mendeley Desktop/Telea/2004/Telea\_2004\_An Image Inpainting Technique Based on the Fast Marching Method.pdf:pdf},
 issn = {1086-7651},
 journal = {Journal of Graphics Tools},
 month = jan,
@@ -62,7 +50,6 @@ address = {New York, New York, USA},
 author = {Bertalmio, Marcelo and Sapiro, Guillermo and Caselles, Vincent and Ballester, Coloma},
 booktitle = {Proceedings of the 27th annual conference on Computer graphics and interactive techniques - SIGGRAPH '00},
 doi = {10.1145/344779.344972},
-file = {:Users/tiao/Documents/Mendeley Desktop/Bertalmio et al/2000/Bertalmio et al.\_2000\_Image inpainting.pdf:pdf},
 isbn = {1581132085},
 keywords = {anisotropic,image restoration,inpainting,isophotes},
 pages = {417--424},
@@ -74,7 +61,6 @@ year = {2000}
 @article{Criminisi2004,
 author = {Criminisi, A and Perez, P. and Toyama, K},
 doi = {10.1109/TIP.2004.833105},
-file = {:Users/tiao/Documents/Mendeley Desktop/Criminisi, Perez, Toyama/2004/Criminisi, Perez, Toyama\_2004\_Region Filling and Object Removal by Exemplar-Based Image Inpainting.pdf:pdf},
 issn = {1057-7149},
 journal = {IEEE Transactions on Image Processing},
 keywords = {image inpainting,multaneous texture and structure,object removal,propagation,si-,texture synthesis},
@@ -89,7 +75,6 @@ year = {2004}
 @article{Ignjatovic2009,
 author = {Ignjatovic, Aleksandar},
 doi = {10.1109/TSP.2009.2020749},
-file = {:Users/tiao/Documents/Mendeley Desktop/Ignjatovic/2009/Ignjatovic\_2009\_Chromatic Derivatives and Local Approximations.pdf:pdf},
 issn = {1053-587X},
 journal = {IEEE Transactions on Signal Processing},
 month = aug,
@@ -100,21 +85,116 @@ url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813249},
 volume = {57},
 year = {2009}
 }
+
 @book{Stein2000,
 author = {Stein, Jonathan Y.},
 isbn = {0471295469},
-mendeley-groups = {Honours Thesis (2.0)},
 month = aug,
 publisher = {John Wiley \& Sons, Inc.},
 title = {{Digital Signal Processing: A Computer Science Perspective}},
 url = {http://dl.acm.org/citation.cfm?id=517927},
 year = {2000}
 }
-@misc{Weisstein,
-author = {Weisstein, Eric W.},
-publisher = {Wolfram Research, Inc.},
-title = {{Kronecker Delta} {From MathWorld--A Wolfram Web Resource.}},
-url = {http://mathworld.wolfram.com/KroneckerDelta.html},
-urldate = {21/10/14}
+
+@inproceedings{Vaidyanathan2001,
+author = {Vaidyanathan, P.P. and Ignjatovic, A. and Narasimha, M.J.},
+booktitle = {Conference Record of Thirty-Fifth Asilomar Conference on Signals, Systems and Computers (Cat.No.01CH37256)},
+doi = {10.1109/ACSSC.2001.986985},
+isbn = {0-7803-7147-X},
+pages = {558--562 vol.1},
+publisher = {IEEE},
+title = {{New sampling expansions for bandlimited signals based on chromatic derivatives}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=986985},
+year = {2001}
 }
+
+@techreport{Cushman2001,
+address = {Los Altos, California},
+author = {Cushman, Matthew and Herron, Timothy},
+institution = {Kromos Technology},
+title = {{The general theory of chromatic derivatives}},
+year = {2001}
+}
+
+@techreport{Herron2001,
+address = {Los Altos, California},
+author = {Herron, Timothy and Byrnes, John},
+institution = {Kromos Technology},
+title = {{Families of Orthogonal Differential Operators for Signal Processing}},
+year = {2001}
+}
+
+@article{Narasimha2002,
+author = {Narasimha, M.J. and Ignjatovic, A. and Vaidyanathan, P.P.},
+doi = {10.1109/LSP.2002.801720},
+issn = {1070-9908},
+journal = {IEEE Signal Processing Letters},
+month = jul,
+number = {7},
+pages = {215--216},
+title = {{Chromatic derivative filter banks}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1025538},
+volume = {9},
+year = {2002}
+}
+
+@article{Ignjatovic2011a,
+author = {Ignjatovic, Aleksandar and Zayed, Ahmed I},
+doi = {10.1090/S0002-9939-2011-10789-5},
+issn = {0002-9939},
+journal = {Proceedings of the American Mathematical Society},
+keywords = {28 years from publication,and phrases,c 2010 american mathematical,chromatic derivatives,chromatic expansions,reverts to public domain,signal representation,society},
+month = oct,
+number = {10},
+pages = {3513--3513},
+title = {{Multidimensional chromatic derivatives and series expansions}},
+url = {http://www.ams.org/jourcgi/jour-getitem?pii=S0002-9939-2011-10789-5},
+volume = {139},
+year = {2011}
+}
+
+@misc{ignjatovic2001method,
+  title={Method and a system of acquiring local signal behavior parameters for representing and processing a signal},
+  author={Ignjatovic, A. and Carlin, N.A.},
+  url={https://www.google.com/patents/US6313778},
+  year={2001},
+  month=nov # "~6",
+  publisher={Google Patents},
+  note={US Patent 6,313,778}
+}
+
+@misc{cushman2003signal,
+  title={Signal processor with local signal behavior and predictive capability},
+  author={Cushman, M. and Ignjatovic, A.},
+  url={https://www.google.com/patents/US6587064},
+  year={2003},
+  month=jul # "~1",
+  publisher={Google Patents},
+  note={US Patent 6,587,064}
+}
+
+@misc{ignjatovic2000signal,
+  title={Signal processor with local signal behavior},
+  author={Ignjatovic, A.},
+  url={https://www.google.com/patents/US6115726},
+  year={2000},
+  month=sep # "~5",
+  publisher={Google Patents},
+  note={US Patent 6,115,726}
+}
+
+@inproceedings{cushman2001method,
+author = {Cushman, Matthew},
+booktitle = {Proc. SIAM Conference on Linear Algebra in Signals, Systems and Control, Boston},
+title = {{A method for approximate reconstruction from filterbanks}},
+year = {2001}
+}
+
+@article{herron2001towards,
+author = {Herron, Timothy},
+journal = {Proc. ISPACS, Nashville},
+title = {{Towards a new transform domain adaptive filtering process using differential operators and their associated splines}},
+year = {2001}
+}
+
 
